[package]
name = "db-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres = "0.7"
surrealdb = { version = "2.4", default-features = false, features = ["protocol-ws", "rustls"] }
rand = "0.9"
